--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.green {
+  width:10px;
+  height:10px;
+  background:green;
+  display:inline-block;
+  border:1px solid white;
+  margin-left:5px;
+}
+
+.red {
+  width:10px;
+  height:10px;
+  display:inline-block;
+  background:red;
+  border:1px solid white;
+  margin-left:5px;
+}
